src/test/ui/issues/issue-17546.stderr
error[E0573]: expected type, found variant `NoResult`
  --> $DIR/issue-17546.rs:12:17
   |
LL |     fn new() -> NoResult<MyEnum, String> {
   |                 --------^^^^^^^^^^^^^^^^
   |                 |
   |                 did you mean `Result`?
   |                 help: try using the variant's enum: `foo::MyEnum`

error[E0573]: expected type, found variant `Result`
  --> $DIR/issue-17546.rs:22:17
   |
LL |     fn new() -> Result<foo::MyEnum, String> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a type
help: possible better candidates are found in other modules, you can import them into scope
   |
LL |     use std::fmt::Result;
   |
LL |     use std::io::Result;
   |
LL |     use std::prelude::v1::Result;
   |
LL |     use std::result::Result;
   |
and 1 other candidates

error[E0573]: expected type, found variant `Result`
  --> $DIR/issue-17546.rs:28:13
   |
LL | fn new() -> Result<foo::MyEnum, String> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a type
help: possible better candidates are found in other modules, you can import them into scope
   |
LL | use std::fmt::Result;
   |
LL | use std::io::Result;
   |
LL | use std::prelude::v1::Result;
   |
LL | use std::result::Result;
   |
and 1 other candidates

error[E0573]: expected type, found variant `NoResult`
  --> $DIR/issue-17546.rs:33:15
   |
LL | fn newer() -> NoResult<foo::MyEnum, String> {
   |               --------^^^^^^^^^^^^^^^^^^^^^
   |               |
   |               did you mean `Result`?
   |               help: try using the variant's enum: `foo::MyEnum`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0573`.
